--- a/config_example.yml
+++ b/config_example.yml
@@ -1,15 +1,16 @@
-pdh_counters:
-    metricprefix: 'myprefix'
-    interval: 5
-    counters:
-        .*:
-            - path: '\Processor(*)\% Processor Time'
-        .*host.*:
-            - path: '\Processor(*)\% User Time'
-    # The names of the hosts to collect counters from. This list should not contain duplicates.
-    # If duplicates exist, only the first instance of the duplicated item will be processed.
-    # Note that localhost will be replaced with the actual hostname of the machine executing
-    # the pdhexport application.
-    hostnames:
-        - 'localhost'
-        - 'host2'
+metricprefix: 'myprefix'
+interval: 5
+counters:
+    .*:
+        - path: '\Processor(*)\% Processor Time'
+    .*host.*:
+        - path: '\Processor(*)\% User Time'
+# The names of the hosts to collect counters from. This list should not contain duplicates.
+# If duplicates exist, only the first instance of the duplicated item will be processed.
+# Note that localhost will be replaced with the actual hostname of the machine executing
+# the pdhexport application. Also note that remote collection of PDH counters is unstable when done in large batches.
+# Therefore, it is suggested you run this app locally on each host then collect the data from each
+# host using the prometheus /metrics http endpoint.
+hostnames:
+    - 'localhost' # this will be automatically replaced with the actual hostname
+    - 'host2'
