--- a/config_example.yml
+++ b/config_example.yml
@@ -24,7 +24,7 @@ ExcludeCounters:
 # The names of the hosts to collect counters from. This list should not contain duplicates.
 # If duplicates exist, only the first instance of the duplicated item will be processed.
 # Note that localhost will be replaced with the actual hostname of the machine executing
-# the pdhexport application. Also note that remote collection of PDH counters is unstable when done in large batches.
+# the pdh_exporter application. Also note that remote collection of PDH counters is unstable when done in large batches.
 # Therefore, it is suggested that you run this app locally on each host then collect the data from each
 # host using the prometheus /metrics http endpoint.
 HostNames:
